3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

common/map.c: Add misisng call to unlink() empty unique maps.  Fixes bug
  1799361 - Permadeath corpse reproduction.  Bug is more general - any unique
  object could be duplicated, so long as it was the only unique object on
  the map.
MSW 2007-10-03

server/pets.c: Add missing call to get_map_from_coord() - summoned big
  creatures on tiled maps end up having incorrect map/coordinate data set,
  resulting in crash.  Fixes bug 1800719
MSW 2007-10-02

server/c_object.c:  Add call to fix_object() in pick_up_ob() - this causes
  player weight & speed to be recalculated - fixes bug 1799411 where this
  wasn't happening.
MSW 2007-10-01

server/c_range.c: Bug fix for [ 1804610 ] cast : info.c:message_callback:
  unidentified messages.  Text output to the gtk2 client may not contain text
  enclosed in square brackets... which is probably a bug in and of itself.
socket/info.c: doxygenated parameters for draw_ext_info() and
  draw_ext_info_format().
Kevin Bulgrien 2007-09-30

server/plugins.c: fix wrong #define leading to crashes.
Nicolas Weeger 2007-09-28

common/map.c: Move update_buttons() from ready_map_name() to
  load_original_map() - in this way, button state is not reset when
  swapping a map back into memory, but button state is still verified
  at first load.  Fixes bug 1706075.
MSW 2007-09-27

server/gods.c: modify god_enchants_weapon() to increase item_power of weapon
  by 1 each time god improves it.  This make sense, but also fixes bug
  1696807 - if the weapon has item_power 0, when player logs on, game
  will calculate new item power, which may be quite surprising to